--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: IOT Master
-email: eric@thedevmonk@gmail.com
+email: thedevmonk@gmail.com
 description: "IOT Master" 
 baseurl: ""
 url: "https://www.iot-master.org"
